fixed body width being too small on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,12 +6,13 @@
 html {
   font-size: 1rem;
   line-height: 1.3;
+  width: fit-content;
 }
 
 body {
   margin: 0;
   color: var(--body-color);
-  background-image: linear-gradient(180deg, #00001f 0%, #04619f 74%);
+  background-image: linear-gradient(147deg, #00001f 0%, #04619f 74%);
 }
 
 .tag {
